// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`App component loads top podcasts on mount 1`] = `
<div>
  <div>
    <header
      class="app-bar"
    >
      <h1
        class="app-brand-heading"
      >
        <a
          class="app-brand"
          href="/"
        >
          <span
            aria-hidden="true"
            class="app-brand__mark"
          >
            🎧
          </span>
          <span>
            Podr
          </span>
        </a>
      </h1>
      <form
        class="search-form"
        role="search"
      >
        <div
          class="search-input-container"
        >
          <input
            aria-label="Search podcasts"
            autocomplete="off"
            class="form-control"
            placeholder="Search podcasts"
            type="search"
          />
        </div>
        <button
          aria-label="Search"
          class="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </header>
    <main
      class="app-main"
    >
      <section
        aria-labelledby="top-podcasts-heading"
        class="section"
      >
        <div
          class="section__header"
        >
          <h2
            class="section__title"
            id="top-podcasts-heading"
          >
            Top podcasts
          </h2>
        </div>
        <ul
          class="card-grid"
        >
          <li
            class="podcast-card"
          >
            <button
              class="podcast-card__open"
              type="button"
            >
              <img
                alt=""
                class="podcast-card__artwork"
                decoding="async"
                draggable="false"
                height="100"
                loading="eager"
                src="test-image-url-large"
                srcset="test-image-url-large 1x, test-image-url-large 2x"
                width="100"
              />
              <span
                class="podcast-card__name"
              >
                Test Podcast
              </span>
            </button>
            <button
              aria-pressed="false"
              class="icon-button podcast-card__favorite"
              title="Add Test Podcast to your library"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ☆
              </span>
              <span
                class="visually-hidden"
              >
                Add Test Podcast to your library
              </span>
            </button>
          </li>
        </ul>
      </section>
      <section
        aria-labelledby="library-heading"
        class="section"
      >
        <div
          class="section__header"
        >
          <h2
            class="section__title"
            id="library-heading"
          >
            Your library
          </h2>
        </div>
        <div
          class="empty-state empty-state--compact"
        >
          <p>
            Nothing saved yet.
          </p>
          <p
            class="empty-message"
          >
            Star a podcast to keep it here, ready to open offline.
          </p>
        </div>
      </section>
      <section
        aria-labelledby="episodes-heading"
        class="section"
      >
        <div
          class="section__header"
        >
          <h2
            class="section__title"
            id="episodes-heading"
          >
            Episodes
          </h2>
        </div>
        <section
          aria-busy="false"
        >
          <table
            class="episodes-table"
          >
            <caption>
              Podcast Episodes
            </caption>
            <tbody>
              <tr
                class="empty-row"
              >
                <td
                  colspan="3"
                >
                  <div
                    class="empty-state"
                  >
                    <p
                      class="empty-message"
                    >
                      Pick a podcast above to see its episodes.
                    </p>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </section>
      </section>
    </main>
    <div
      aria-hidden="true"
      aria-label="Episode player"
      class="player-bar"
      hidden=""
      role="region"
    >
      <div
        class="player-bar__text"
      >
        <div
          class="player-bar__title"
        />
        <div
          class="player-bar__subtitle"
        />
      </div>
      <audio
        aria-label="Episode player"
        controls=""
        preload="none"
      />
    </div>
  </div>
</div>
`;

exports[`App component renders without crashing 1`] = `
<div>
  <div>
    <header
      class="app-bar"
    >
      <h1
        class="app-brand-heading"
      >
        <a
          class="app-brand"
          href="/"
        >
          <span
            aria-hidden="true"
            class="app-brand__mark"
          >
            🎧
          </span>
          <span>
            Podr
          </span>
        </a>
      </h1>
      <form
        class="search-form"
        role="search"
      >
        <div
          class="search-input-container"
        >
          <input
            aria-label="Search podcasts"
            autocomplete="off"
            class="form-control"
            placeholder="Search podcasts"
            type="search"
          />
        </div>
        <button
          aria-label="Search"
          class="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </header>
    <main
      class="app-main"
    >
      <section
        aria-labelledby="top-podcasts-heading"
        class="section"
      >
        <div
          class="section__header"
        >
          <h2
            class="section__title"
            id="top-podcasts-heading"
          >
            Top podcasts
          </h2>
        </div>
        <ul
          class="card-grid"
        >
          <li
            aria-hidden="true"
            class="podcast-card"
          >
            <div
              class="skeleton skeleton--card"
            />
          </li>
          <li
            aria-hidden="true"
            class="podcast-card"
          >
            <div
              class="skeleton skeleton--card"
            />
          </li>
          <li
            aria-hidden="true"
            class="podcast-card"
          >
            <div
              class="skeleton skeleton--card"
            />
          </li>
          <li
            aria-hidden="true"
            class="podcast-card"
          >
            <div
              class="skeleton skeleton--card"
            />
          </li>
          <li
            aria-hidden="true"
            class="podcast-card"
          >
            <div
              class="skeleton skeleton--card"
            />
          </li>
          <li
            aria-hidden="true"
            class="podcast-card"
          >
            <div
              class="skeleton skeleton--card"
            />
          </li>
        </ul>
      </section>
      <section
        aria-labelledby="library-heading"
        class="section"
      >
        <div
          class="section__header"
        >
          <h2
            class="section__title"
            id="library-heading"
          >
            Your library
          </h2>
        </div>
        <div
          class="empty-state empty-state--compact"
        >
          <p>
            Nothing saved yet.
          </p>
          <p
            class="empty-message"
          >
            Star a podcast to keep it here, ready to open offline.
          </p>
        </div>
      </section>
      <section
        aria-labelledby="episodes-heading"
        class="section"
      >
        <div
          class="section__header"
        >
          <h2
            class="section__title"
            id="episodes-heading"
          >
            Episodes
          </h2>
        </div>
        <section
          aria-busy="false"
        >
          <table
            class="episodes-table"
          >
            <caption>
              Podcast Episodes
            </caption>
            <tbody>
              <tr
                class="empty-row"
              >
                <td
                  colspan="3"
                >
                  <div
                    class="empty-state"
                  >
                    <p
                      class="empty-message"
                    >
                      Pick a podcast above to see its episodes.
                    </p>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </section>
      </section>
    </main>
    <div
      aria-hidden="true"
      aria-label="Episode player"
      class="player-bar"
      hidden=""
      role="region"
    >
      <div
        class="player-bar__text"
      >
        <div
          class="player-bar__title"
        />
        <div
          class="player-bar__subtitle"
        />
      </div>
      <audio
        aria-label="Episode player"
        controls=""
        preload="none"
      />
    </div>
  </div>
</div>
`;
